zapis do bazy postgres

--- a/research.ipynb
+++ b/research.ipynb
@@ -2,34 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import time\n",
-    "import requests\n",
     "import json\n",
-    "import unidecode\n",
+    "import time\n",
     "\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "import unidecode\n",
     "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "offer_url_1 = \"https://www.otodom.pl/pl/oferta/2-pok-55-m2-z-widokiem-na-ogrod-krasinskich-ID4lszi\"\n",
-    "offer_url_2 = \"https://www.otodom.pl/pl/oferta/widokowe-3-pokoje-przy-metrze-wawrzyszew-ID4lxZ0\"\n",
-    "listing_url_1 = \"https://www.otodom.pl/pl/oferty/sprzedaz/mieszkanie/warszawa?distanceRadius=0&locations=%5Bcities_6-26%5D&viewType=listing\"\n"
+    "# Get database credentials\n",
+    "\n",
+    "f = open(\"database.txt\", \"r\")\n",
+    "lines = f.readlines()\n",
+    "\n",
+    "username = lines[0].replace(\"\\n\", \"\")\n",
+    "password = lines[1].replace(\"\\n\", \"\")\n",
+    "host = lines[2].replace(\"\\n\", \"\")\n",
+    "port = lines[3].replace(\"\\n\", \"\")\n",
+    "table = lines[4].replace(\"\\n\", \"\")\n",
+    "f.close()\n",
+    "\n",
+    "# print(\n",
+    "#     f\"username: {username}, password: {password}, host: {host}, port: {port}, table: {table}\"\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offer_url_1 = \"https://www.otodom.pl/pl/oferta/2-pok-55-m2-z-widokiem-na-ogrod-krasinskich-ID4lszi\"\n",
+    "offer_url_2 = (\n",
+    "    \"https://www.otodom.pl/pl/oferta/widokowe-3-pokoje-przy-metrze-wawrzyszew-ID4lxZ0\"\n",
+    ")\n",
+    "listing_url_1 = \"https://www.otodom.pl/pl/oferty/sprzedaz/mieszkanie/warszawa?distanceRadius=0&locations=%5Bcities_6-26%5D&viewType=listing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +80,10 @@
     "\n",
     "    for line in offer_params:\n",
     "        k = unidecode.unidecode(\n",
-    "            str(line.parent.parent[\"aria-label\"]).replace(\" / \", \"_\").replace(\" \", \"_\").lower()\n",
+    "            str(line.parent.parent[\"aria-label\"])\n",
+    "            .replace(\" / \", \"_\")\n",
+    "            .replace(\" \", \"_\")\n",
+    "            .lower()\n",
     "        )\n",
     "        v = unidecode.unidecode(str(line.text).strip())\n",
     "        results[k] = v\n",
@@ -66,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,11 +164,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(f\"results_{int(time.time())}.csv\", index = False)"
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.insert(loc=0, column=\"create_timestamp\", value=datetime.datetime.now())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "engine = create_engine(f\"postgresql://{username}:{password}@{host}:{port}/{table}\")\n",
+    "df.to_sql(\"otodom_offers_1\", engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(f\"results_{int(time.time())}.csv\", index=False)"
    ]
   },
   {
